<resources>
    <string name="app_name">Words</string>
    <string name="phone_number">Phone number</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="password">Password</string>
    <string name="input_password">Input password</string>
    <string name="login">Log in</string>
    <string name="join_now">Join now</string>

    <string name="back">Back</string>
    <string name="tools">Tools</string>
    <string name="tool_bar_title">Tool bar title</string>
    <string name="navigate_to_home">Navigate to home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="words">Words</string>
    <string name="learning_words">Learning</string>
    <string name="log_out">Log out</string>
    <string name="play_list_s_name_default_play_list">Play list`s name, default: Play list</string>
    <string name="open_words">Open words</string>
    <string name="play_lists">Play lists</string>
    <string name="open_word">Open word</string>
    <string name="selected_word_label">Selected word label</string>
    <string name="word_has_image">Word has image</string>
    <string name="word_has_sound">Word has sound</string>
    <string name="word_details">Word details</string>
    <string name="word_image">Word image</string>
    <string name="word_sound">Word sound</string>
    <string name="category_template">Category: %s</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="word_filter">Word filter</string>
    <string name="input_word">Input word</string>
    <string name="word">Word</string>
    <string name="translate">Translate</string>
    <string name="multi_input_title">Multi input title</string>
    <string name="add_element">Add element</string>
    <string name="translate_language">Translate language</string>
    <string name="word_language">Word language</string>
    <string name="remove_element">Remove element</string>
    <string name="category">Category</string>
    <string name="sort_by">Sort by</string>
    <string name="direction">Direction</string>
    <string name="find">Find</string>
    <string name="text_template">(%s): %s</string>
    <string name="word_custom_image">Word custom image</string>
    <string name="delete_image_if_set">Delete image if set</string>
    <string name="previous_word">Previous word</string>
    <string name="save_changes">Save changes</string>
    <string name="last_date_read_template">Last date read: %s</string>
    <string name="date_of_add_template">Date of add: %s</string>
    <string name="date_of_creation_template">Date of creation: %s</string>

    <string name="user_word_title_template">User words %s</string>
    <string name="changes_saved">Changes saved</string>
    <string name="add_play_list">Add play list</string>
    <string name="find_play_lists">Find play lists</string>
    <string name="play_list_details_template">Date of creation: %s\nCount of words: %s</string>
    <string name="apply">Apply</string>
    <string name="choose_playlist">Choose playlist</string>
    <string name="mark_chose">Mark chose</string>
    <string name="unpin">Unpin</string>
    <string name="play_word_training">Play word training</string>
    <string name="words_count_template">Words: %s</string>
    <string name="unselect">Unselect</string>
    <string name="title">Title</string>
    <string name="play_list_is_empty">Play list is empty</string>
    <string name="play_list_s_name">Play list\'s name</string>
    <string name="create_play_list">Create play list</string>
    <string name="create">Create</string>
    <string name="pay">Pay</string>
    <string name="subscription_expiration_date">Subscription expiration date</string>
    <string name="subscription_s">Subscription: %s</string>
    <string name="subscription">Subscription</string>
    <string name="card_pay">Card pay</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Card name</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvv2">CVV2</string>
    <string name="email">Email</string>

    <string name="card_pay_column_count">1</string>
    <string name="card_pay_row_count">6</string>
    <string name="cost_s">Cost: %.2f %s</string>
    <string name="days_s">Days: %s</string>
    <string name="costs_title">Costs</string>
    <string name="content">Content</string>
    <string name="temp_number_exercise">1.</string>
    <string name="confirm">CONFIRM</string>
    <string name="selected_image">Selected image</string>
    <string name="translate_the_word">Translate the word</string>
    <string name="text_about_something_to_do_with_the_exercise">Text about something to do with the exercise</string>
    <string name="next">Next</string>
    <string name="add_letter">Add letter</string>
    <string name="share_word_qr_code">Share word qr code</string>
    <string name="icon_menu_button_descr">Icon Menu Button</string>

</resources>

