<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary_back"
    android:layout_height="70dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/tool_bar_btn_size"
        android:layout_height="@dimen/tool_bar_btn_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/arrow"
        android:contentDescription="@string/back" />

    <ImageButton
        android:id="@+id/additionalButton"
        android:layout_width="@dimen/tool_bar_btn_size"
        android:layout_height="@dimen/tool_bar_btn_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/tools"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_green"
        android:textSize="29sp"

        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"

        android:textAlignment="center"
        android:maxLines="1"
        android:ellipsize="end"

        android:text="@string/tool_bar_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/additionalButton"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>