<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/play_list_box_height"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/box_back">


    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:maxLength="35"
        android:maxLines="1"
        android:textAlignment="center"
        android:text="@string/play_list_s_name_default_play_list"
        android:textColor="@color/primary_green"
        android:textSize="@dimen/play_list_box_title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <ImageButton
        android:id="@+id/open"
        android:layout_width="@dimen/play_list_box_open_btn_width_height"
        android:layout_height="@dimen/play_list_box_open_btn_width_height"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/open_words"
        android:rotationY="180"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/countAndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/countAndDate"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/countAndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/play_list_details_template"
        android:textColor="@color/primary_green"
        android:textSize="@dimen/play_list_box_details_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />
</androidx.constraintlayout.widget.ConstraintLayout>