<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_back"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/navigationBar"
        layout="@layout/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="691dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/play_lists"
        android:textColor="@color/primary_green"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playListContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/navigationBar"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="1dp" />

    <ImageButton
        android:id="@+id/addPlayListButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"

        app:srcCompat="@drawable/add"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/add_play_list" />

    <ImageButton
        android:id="@+id/findButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"

        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/find"
        android:contentDescription="@string/find_play_lists" />
</androidx.constraintlayout.widget.ConstraintLayout>