<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:background="@drawable/box_back_square"
   >

    <TextView
        android:id="@+id/title"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/create_play_list"
        android:textAlignment="center"
        android:textColor="@color/primary_green"
        android:textSize="30sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
     />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playListLayout"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:textColorHint="@color/primary_green"
        android:layout_marginTop="10dp"

        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="255"
        app:counterTextColor="@color/primary_green"
        app:cursorColor="@color/primary_green"
        app:hintTextColor="@color/primary_green"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="PrivateResource">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playListNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/play_list_s_name"
            android:textColor="@color/primary_green"

            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:textColor="@color/primary_back"
        app:backgroundTint="@null"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playListLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>