<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_back">

    <include
        android:id="@+id/toolBar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"

                android:minWidth="100dp"
                android:minHeight="100dp"
                android:maxHeight="300dp"
                android:maxWidth="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/word_image"
                android:src="@drawable/image_icon" />

            <Space
                android:id="@+id/imageSpace"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/categoryText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/category_template"
                android:textColor="@color/primary_green"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/cefrLevelText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/cefr_level"
                android:textColor="@color/primary_green"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/wordText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/text_template"
                android:textColor="@color/primary_green"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/translateText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/text_template"
                android:textColor="@color/primary_green"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dateOfAddText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:textColor="@color/primary_green"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lastDateReadText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:textColor="@color/primary_green"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/primary_green"
                android:textSize="18sp"
                />

            <ImageView
                android:id="@+id/soundButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/word_sound"
                android:src="@drawable/sound" />



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>




